# PaperBanana

./: .gitignore  Dockerfile  demo.py  docker-compose.yaml  entrypoint.sh  pyproject.toml
configs/: model_config.template.yaml
scripts/: setup.py
